--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "ng2-bootstrap": "^1.1.16-11",
+    "ng2-sharebuttons": "^1.1.5",
     "protractor": "~4.0.13",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
